--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+	<audio controls autoplay>
+		<source src="Bodyguard  - Steel Pulse.mp3" type="audio/mpeg">
+	</audio>
+</body>
+
 </html>
+<script type="text/javascript" src="audio.js"></script>
+<script type="text/javascript">
+	var Audio = new myAudioPlayer(document.getElementsByTagName('audio'),{});
+</script>
