--- a/index.html
+++ b/index.html
@@ -2,30 +2,77 @@
 <html>
 
 <head>
-	<title>JsAudioPlayer</title>
-	<!----Jquery-->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<!--bootstrap-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!--fontawesome-->
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JsAudioPlayer</title>
+    <!----Jquery-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--fontawesome-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+<style>
+	.audio-details{
+		padding: 10px 0 0 15px;
+	}
+	#audioProgress-bar{
+		height: 12px;
+		margin: 0 6px;
+		width: 100%;
+		cursor: pointer;
+		position: relative;
+	}
+	#audioProgress-bar::before {
+	    content: '';
+	    position: absolute;
+	    top: 5px;
+	    width: 100%;
+	    height: 3px;
+	    background-color: #DDE2E6;
+	}
+	#audioProgress-bar #played{
+		position: absolute;
+	    top: 5px;
+	    height: 3px;
+	    background: -webkit-linear-gradient(left,#0059FF,#09B1FA);
 
+	}
+
+	#audioProgress-bar #played::after {
+	    display: flex;
+	    position: absolute;
+	    content: '';
+	    box-sizing: border-box;
+	    top: -5px;
+	    right: -1px;
+	    margin-right: -5px;
+	    width: 12px;
+	    height: 12px;
+	    background-color: #cc6600;
+	    border-radius: 6px;
+	}
+</style>
 <body>
-	<div class="container">
-	<div class="row">
-	<audio id="music">
-		<source src="Bodyguard  - Steel Pulse.mp3" type="audio/mpeg">
-	</audio>
-
-	<i class="fa fa-5x fa-play-circle a" id="play" onclick="play_music('music','play');replace_class('play');" ></i>
-       
-	<div >
-		<h5>Music Name</h5>
-	</div>
-		 </div>   
-		 </div>               
+    <div class="container">
+        <div class="row">
+            <audio id="music">
+                <source src="Bodyguard  - Steel Pulse.mp3" type="audio/mpeg">
+            </audio>
+            <i class="fa fa-5x fa-play-circle a" id="play" onclick="play_music('music','play');replace_class('play');"></i>
+            <div class="audio-details">
+                <h5>Music Name</h5>
+                <div id="audioProgress-bar">
+                	<span id="played"></span>
+                </div>
+                <div class="time">
+                	<p>
+                		<span id="current_time">00:00</span> /
+                		<span id="total_time">00:00</span>
+                	</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
