--- a/index.html
+++ b/index.html
@@ -50,12 +50,65 @@
 	    height: 12px;
 	    background-color: #cc6600;
 	    border-radius: 6px;
+
+	}
+	.volume{
+		margin-left: 0px;	
+		padding-left: 20px;	
+		font-size: 19px;
+	}
+	.volume i,.volume span{
+		cursor: pointer;
+		transition: all .2s;
+	}
+	.volume i:hover{
+		color: #ffa31a;
+	}
+	.volume #volume-container{
+		padding-left: 10px;
+		height:5px;
+		width: 50px;
+		position: relative;
+		transition: opacity 2s ease-in;
+		/*display: none;*/
+	}
+	.volume #volume-container::before {
+	    content: '';
+	    position: absolute;
+	    top: 1px;
+	    width: 100%;
+	    height: 3px;
+	    background-color: #DDE2E6;
+	}
+	.volume #volume-container #volume-level{
+		position: absolute;
+	    top: 1px;
+	    height: 3px;
+	    background: -webkit-linear-gradient(left,#212529,#394047);
+	    width: 50%;
+	}
+	.volume #volume-container #volume-level::after {
+	    display: flex;
+	    position: absolute;
+	    content: '';
+	    box-sizing: border-box;
+	    top: -5px;
+	    right: -1px;
+	    margin-right: -5px;
+	    width: 12px;
+	    height: 12px;
+	    background-color: #ccc;
+	    border: 1px solid #ccc;
+	    border-radius: 6px;
+	}
+	.volume:hover #volume-container{
+		display: block;		
 	}
 </style>
 <body>
     <div class="container">
-        <div class="row">
-            <audio id="music">
+        <div class="row" style="background: #f9f9f9;">
+            <audio id="music" >
                 <source src="Bodyguard  - Steel Pulse.mp3" type="audio/mpeg">
             </audio>
             <i class="fa fa-5x fa-play-circle a" id="play" onclick="play_music('music','play');replace_class('play');"></i>
@@ -70,6 +123,12 @@
                 		<span id="total_time">00:00</span>
                 	</p>
                 </div>
+            </div>
+            <div class="row justify-content-center align-items-center volume">
+            	<i class="fa fa-volume-up" id="volume-icon"></i>
+            	<span id="volume-container">
+            		<span id="volume-level"></span>            		
+            	</span>
             </div>
         </div>
     </div>
